[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/native_dialogs/bin/native_dialog_open_file.gdns" type="Script" id=1]
[ext_resource path="res://src/Buttons/SelectImage.gd" type="Script" id=2]

[node name="SelectImage" type="Button"]
unique_name_in_owner = true
visible = false
margin_top = 80.0
margin_right = 300.0
margin_bottom = 121.251
text = "Select Image"
script = ExtResource( 2 )

[node name="SelectImageNativeDialogOpenFile" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource( 1 )
title = "Select image for img2img"
initial_path = "user://"
filters = PoolStringArray( "*.png, *.webp, *.jpg, *.jpeg ; Image Files" )

[connection signal="pressed" from="." to="." method="_on_SelectImage_pressed"]
[connection signal="files_selected" from="SelectImageNativeDialogOpenFile" to="." method="_on_SelectImageNativeDialogOpenFile_files_selected"]
